--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Website</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
 </head>
 
 <body>
     <!-- nav section start -->
-    <header>
-        <nav class="container">
+    <header class="container">
+        <nav class="nav-content">
             <h2><em><span style="color: rgb(230, 83, 60)" ;>Fitness</span></em></h2>
             <div class="navbar-heading">
                 <p><button class="home-btn"><b>Home</b></button></p>
@@ -22,13 +23,35 @@
         </nav>
         <!-- nav section ends -->
 
+
         <!-- banner section start -->
 
-
-
+        <div class="banner-section">
+            <div class="left-side-text">
+                <h1>Get body in <br /> <span class="shape">shape</span> & stay <br /> healthy</h1>
+                <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to
+                    help you get fit and stay fit!</p>
+                <div class="btn-style">
+                    <button class="btn-join-club">Join Club Now!</button>
+                    <button class="btn-download-app">Download App</button>
+                </div>
+            </div>
+            <div class="right-side-img">
+                <img src="images/Images 2.png" alt="">
+                <h3 class="video-card-350"><span class="circle"></span>350+<br><span class="video-paragraph">Video tutorial</span></h3>
+                <h2 class="video-card-500">500+<br><span class="workout-paragraph">Free workout videos</span></h2>
+                  
+            </div>                                                
+        </div>
     </header>
 
-    
+    <main>
+        <section>
+
+        </section>
+    </main>
+
+
 </body>
 
 </html>
