run extra mile section banner added

--- a/index.html
+++ b/index.html
@@ -38,17 +38,78 @@
             </div>
             <div class="right-side-img">
                 <img src="images/Images 2.png" alt="">
-                <h3 class="video-card-350"><span class="circle"></span>350+<br><span class="video-paragraph">Video tutorial</span></h3>
+                <h3 class="video-card-350"><span class="circle"></span>350+<br><span class="video-paragraph">Video
+                        tutorial</span></h3>
                 <h2 class="video-card-500">500+<br><span class="workout-paragraph">Free workout videos</span></h2>
-                  
-            </div>                                                
+
+            </div>
         </div>
     </header>
-
+    <!-- change your habit section start -->
     <main>
-        <section>
+        <section class="Change-Your-Habit">
+            <div class="habit-container">
+                <div class="habit-content">
+                    <h1>Change Your Habits</h1>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br>
+                        access to a gym.</p>
+                </div>
+                <div class="img-container">
+                    <div>
+                        <img src="images/image 3.png" alt="">
+                        <h3>Movement</h3>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div>
+                        <img src="images/image 2.png" alt="">
+                        <h3>Time</h3>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div>
+                        <img src="images/image 4.png" alt="">
+                        <h3>Practice</h3>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div>
+                        <img src="images/image 5.png" alt="">
+                        <h3>Weight Loss</h3>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Change your habit section end -->
+
+        <!-- Run section Start -->
+
+        <section class="run-extra-mile-banner">
+            <div class="run-banner-container">
+                <div class="run-banner-content">
+                    <h1>Run an Extra <br> Mile Easily</h1>
+                    <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access
+                        to a gym. With <br> hundreds of professional workouts.</p>
+                    <button class="run-banner-btn">Join Now</button>
+                </div>
+
+                <div class="img-style">
+                    <img src="images/run.jpg" alt="">
+                </div>
+            </div>
 
         </section>
+
+        <!-- BMI Calculator section start -->
+
+        <section class="BMI-header-banner">
+            <div>
+                <h1>BMI Calculator</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            </div>
+        </section>
+
+        <!-- BMI Calculator section end -->
+
     </main>
 
 
