--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             <div class="run-banner-container">
                 <div class="run-banner-content">
                     <h1>Run an Extra <br> Mile Easily</h1>
-                    <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access
+                    <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or
+                        access
                         to a gym. With <br> hundreds of professional workouts.</p>
                     <button class="run-banner-btn">Join Now</button>
                 </div>
@@ -102,15 +103,141 @@
         <!-- BMI Calculator section start -->
 
         <section class="BMI-header-banner">
-            <div>
+            <div class="BMI-content">
                 <h1>BMI Calculator</h1>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access
+                    to a gym.</p>
+            </div>
+        </section>
+
+        <section class="BMI-calculator-style">
+
+            <div class="calculator-chart">
+                <h1>BMI Calculator Chart</h1>
+                <table>
+                    <tr>
+                        <th>BMI</th>
+                        <th>Weight Status</th>
+
+                    </tr>
+
+                    <tr>
+                        <td>below 18.5</td>
+                        <td>Under Weight</td>
+                    </tr>
+                    <tr>
+                        <td>18.5-24.9</td>
+                        <td>Healthy</td>
+                    </tr>
+                    <tr>
+                        <td>25.0-29.9</td>
+                        <td>Overweight</td>
+                    </tr>
+                    <tr>
+                        <td>30.0 and above</td>
+                        <td>Obese</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="calculate-your-BMI">
+                <div>
+                    <h1>Calculate your BMI</h1>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a gym. </p>
+                </div>
+
+                <div>
+                    <form class="form-design">
+                        <input type="text" name="" id="" placeholder="Height/cm">
+                        <input type="text" name="" id="" placeholder="Weight/kg">
+                        <input type="text" name="" id="" placeholder="Age">
+                        <input type="text" name="" id="" placeholder="Sex">
+                        <input class="activity" type="text" name="" id="" placeholder="Select an activity factor">
+                    </form>
+                </div>
+                <button>Calculate</button>
             </div>
         </section>
 
         <!-- BMI Calculator section end -->
 
+        <section class="meet-our-team">
+            <div class="meet-our-team-content">
+                <h1>Meet-Our-Team</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym.</p>
+            </div>
+
+            <div class="display-grid">
+
+                <div class="trainer-1"><img src="images/trainer1.png" alt="">
+                    <h3>Jerome Bell</h3>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-2"><img src="images/trainer2.png" alt="">
+                    <h3>Cameron William</h3>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-3"><img src="images/trainer3.png" alt="">
+                    <h3>Darrell Steward</h3>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-4"><img src="images/trainer4.png" alt="">
+                    <h3>Dianne Russell</h3>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-5"><img src="images/trainer5.png" alt="">
+                    <h3>Cody Fisher</h3>
+                    <p>Trainer</p>
+                </div>
+                <div class="trainer-6"><img src="images/trainer6.png" alt="">
+                    <h3>Theresa Webb</h3>
+                    <p>Trainer</p>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- footer section start -->
+    <footer>
+        <section class="footer-container">
+            <div>
+                <h1>Fitness</h1>
+                <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access
+                    to a gym.
+                    With <br> hundreds of professional workouts.</p>
+            </div>
+
+            <div>
+                <h3>Get Started</h3>
+                <ul class="list-item-1">
+                    <li>Service</li>
+                    <li>Contact Us</li>
+                    <li>Affiliate Program</li>
+                    <li>About Us</li>
+                </ul>
+            </div>
+
+            <div>
+                <h3>Get Started</h3>
+                <ul class="list-item-2">
+                    <li>Fitness</li>
+                    <li>Platform Us</li>
+                    <li>Workout Library</li>
+                    <li>App Design</li>
+                </ul>
+            </div>
+        </section>
+        <div class="copyright">
+            <hr>
+            <p>All right reserved @Fitness 2024</p>
+        </div>
+    </footer>
+
+
+    <!-- footer section end -->
+
 
 
 </body>
